# stm32f1-embassy

./: Cargo.toml  README.md
