[package]
name = "stm32f1-embassy"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-futures = "0.1.0"

# Change stm32f103c8 to your chip name, if necessary.
embassy-stm32 = { version = "0.2.0", features = [
  "defmt",
  "stm32f103c8",
  "unstable-pac",
  "memory-x",
  "time-driver-any",
] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
] }
embassy-time = { version = "0.4.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
static_cell = "2.0.0"

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
